--- a/index.ipynb
+++ b/index.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "08c6a552",
+   "execution_count": 111,
+   "id": "4dbf47a3",
    "metadata": {},
    "outputs": [
     {
@@ -119,265 +119,139 @@
        "4      NaN       1200   2.0      1.0   51.00  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error\n",
     "\n",
+    "# Load data\n",
     "df = pd.read_csv(\"C:\\\\Users\\\\HP\\\\OneDrive\\\\Desktop\\\\House_price_prediction\\\\dataset\\\\Bengaluru_House_Data.csv\")\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "23de52cd",
+   "execution_count": 112,
+   "id": "4c7b6a6b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>location</th>\n",
-       "      <th>size</th>\n",
-       "      <th>total_sqft</th>\n",
-       "      <th>bath</th>\n",
-       "      <th>price</th>\n",
-       "      <th>bhk</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Electronic City Phase II</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>1056.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>39.07</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Chikka Tirupathi</td>\n",
-       "      <td>4 Bedroom</td>\n",
-       "      <td>2600.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>120.00</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Uttarahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>1440.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>62.00</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Lingadheeranahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>1521.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>95.00</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Kothanur</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>1200.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>51.00</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   location       size  total_sqft  bath   price  bhk\n",
-       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07  2.0\n",
-       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00  4.0\n",
-       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00  3.0\n",
-       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00  3.0\n",
-       "4                  Kothanur      2 BHK      1200.0   2.0   51.00  2.0"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['bhk'] = df['size'].str.extract('(\\d+)').astype(float) # string to numerical\n",
-    "\n",
+    "# Preprocessing\n",
+    "def extract_bhk(x):\n",
+    "    if pd.isna(x):  # Handle NaN values\n",
+    "        return None\n",
+    "    try:\n",
+    "        if isinstance(x, str):  # If it's a string (e.g., \"2 BHK\")\n",
+    "            return int(x.split(' ')[0])\n",
+    "        elif isinstance(x, (int, float)):  # If it's already a number\n",
+    "            return int(x)\n",
+    "        else:  # Fallback for unexpected types\n",
+    "            return None\n",
+    "    except:\n",
+    "        return None  # If any error occurs\n",
+    "    \n",
     "def convert_sqft(x):\n",
     "    try:\n",
     "        x = str(x).strip()\n",
-    "\n",
-    "        # For intervals\n",
-    "        if '-' in x:\n",
-    "            parts = x.split('-')\n",
-    "            if len(parts) == 2:\n",
-    "                a, b = float(parts[0]), float(parts[1])\n",
-    "                return (a + b) / 2\n",
-    "\n",
-    "        # numerical values\n",
+    "        if '-' in x:  # Handle ranges like \"1000-1500\"\n",
+    "            low, high = map(float, x.split('-'))\n",
+    "            return (low + high) / 2  # Take average\n",
     "        return float(x)\n",
-    "\n",
     "    except:\n",
-    "        # Non-numeric values\n",
-    "        return None\n",
-    "    \n",
-    "df['total_sqft'] = df['total_sqft'].apply(convert_sqft)\n",
-    "df.drop(['area_type', 'society', 'availability', 'balcony'], axis=1, inplace=True)\n",
-    "df.head()"
+    "        return None  # Return None for unconvertible values   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "6a607d7e",
+   "execution_count": 113,
+   "id": "5cef598b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['bhk'] = df['size'].apply(extract_bhk)\n",
+    "df.drop('size', axis=1, inplace=True)  # Drop original column\n",
+    "\n",
+    "df['total_sqft'] = df['total_sqft'].apply(convert_sqft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "c0c24030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove outliers\n",
+    "df = df[(df['total_sqft'] > 300) & (df['total_sqft'] < 3000)]\n",
+    "df = df[df['price'] < df['price'].quantile(0.95)]\n",
+    "\n",
+    "# Handle location\n",
+    "df = df[df['location'].notnull()]\n",
+    "df['location'] = df['location'].str.strip()\n",
+    "loc_counts = df['location'].value_counts()\n",
+    "df['location'] = df['location'].apply(lambda x: 'other' if loc_counts[x] <= 10 else x)\n",
+    "\n",
+    "# Feature engineering\n",
+    "df['price_per_sqft'] = (df['price'] * 1e5) / df['total_sqft']\n",
+    "\n",
+    "# Select features and target\n",
+    "features = ['total_sqft', 'bath', 'bhk', 'price_per_sqft', 'location']\n",
+    "df = df[features + ['price']].dropna()\n",
+    "\n",
+    "# One-hot encoding\n",
+    "df = pd.get_dummies(df, columns=['location'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c400637",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data\n",
+    "X = df.drop('price', axis=1)\n",
+    "y = df['price']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Handle missing values (using train set statistics)\n",
+    "for col in ['total_sqft', 'bath', 'bhk', 'price_per_sqft']:\n",
+    "    median_val = X_train[col].median()\n",
+    "    X_train[col].fillna(median_val, inplace=True)\n",
+    "    X_test[col].fillna(median_val, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "38557836",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>location</th>\n",
-       "      <th>size</th>\n",
-       "      <th>total_sqft</th>\n",
-       "      <th>bath</th>\n",
-       "      <th>price</th>\n",
-       "      <th>bhk</th>\n",
-       "      <th>price_per_sqft</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Electronic City Phase II</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>1056.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>39.07</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3699.810606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Chikka Tirupathi</td>\n",
-       "      <td>4 Bedroom</td>\n",
-       "      <td>2600.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>120.00</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4615.384615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Uttarahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>1440.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>62.00</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4305.555556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Lingadheeranahalli</td>\n",
-       "      <td>3 BHK</td>\n",
-       "      <td>1521.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>95.00</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6245.890861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Kothanur</td>\n",
-       "      <td>2 BHK</td>\n",
-       "      <td>1200.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>51.00</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4250.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   location       size  total_sqft  bath   price  bhk  \\\n",
-       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07  2.0   \n",
-       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00  4.0   \n",
-       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00  3.0   \n",
-       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00  3.0   \n",
-       "4                  Kothanur      2 BHK      1200.0   2.0   51.00  2.0   \n",
-       "\n",
-       "   price_per_sqft  \n",
-       "0     3699.810606  \n",
-       "1     4615.384615  \n",
-       "2     4305.555556  \n",
-       "3     6245.890861  \n",
-       "4     4250.000000  "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score: 0.9367269265798911\n",
+      "MAE: 6.428069917511212\n"
+     ]
     }
    ],
    "source": [
-    "df['price_per_sqft'] = (df['price'] * 1e5) / df['total_sqft']\n",
+    "# Model training\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "preds = model.predict(X_test)\n",
     "\n",
-    "df = df[df['location'].notnull()]  # Remove rows with null location\n",
-    "df['location'] = df['location'].apply(lambda x: x.strip())\n",
-    "loc_counts = df['location'].value_counts()\n",
-    "rare_locs = loc_counts[loc_counts <= 10].index\n",
-    "df['location'] = df['location'].apply(lambda x: 'other' if x in rare_locs else x)\n",
-    "\n",
-    "df.head()"
+    "# Evaluation\n",
+    "print(\"R2 Score:\", r2_score(y_test, preds))\n",
+    "print(\"MAE:\", mean_absolute_error(y_test, preds))"
    ]
   }
  ],
