--- a/index.ipynb
+++ b/index.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b517d6de",
+   "metadata": {},
+   "source": [
+    "House Price Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "id": "4dbf47a3",
    "metadata": {},
    "outputs": [
@@ -119,7 +127,7 @@
        "4      NaN       1200   2.0      1.0   51.00  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,40 +145,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 112,
-   "id": "4c7b6a6b",
+   "cell_type": "markdown",
+   "id": "ee2b180a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Preprocessing\n",
-    "def extract_bhk(x):\n",
-    "    if pd.isna(x):  # Handle NaN values\n",
-    "        return None\n",
-    "    try:\n",
-    "        if isinstance(x, str):  # If it's a string (e.g., \"2 BHK\")\n",
-    "            return int(x.split(' ')[0])\n",
-    "        elif isinstance(x, (int, float)):  # If it's already a number\n",
-    "            return int(x)\n",
-    "        else:  # Fallback for unexpected types\n",
-    "            return None\n",
-    "    except:\n",
-    "        return None  # If any error occurs\n",
-    "    \n",
-    "def convert_sqft(x):\n",
-    "    try:\n",
-    "        x = str(x).strip()\n",
-    "        if '-' in x:  # Handle ranges like \"1000-1500\"\n",
-    "            low, high = map(float, x.split('-'))\n",
-    "            return (low + high) / 2  # Take average\n",
-    "        return float(x)\n",
-    "    except:\n",
-    "        return None  # Return None for unconvertible values   \n"
+    "Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
+   "id": "4c7b6a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_bhk(x):\n",
+    "    if pd.isna(x):  # Handle NaN values\n",
+    "        return None\n",
+    "    try:\n",
+    "        if isinstance(x, str):  # For string data type (\"2 BHK\")\n",
+    "            return int(x.split(' ')[0])\n",
+    "        elif isinstance(x, (int, float)):  # For numerical data type\n",
+    "            return int(x)\n",
+    "        else:  \n",
+    "            return None\n",
+    "    except:\n",
+    "        return None  \n",
+    "    \n",
+    "def convert_sqft(x):\n",
+    "    try:\n",
+    "        x = str(x).strip()\n",
+    "        if '-' in x:  # For intervals (\"1000-1800\")\n",
+    "            low, high = map(float, x.split('-'))\n",
+    "            return (low + high) / 2  # average\n",
+    "        return float(x)\n",
+    "    except:\n",
+    "        return None   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "5cef598b",
    "metadata": {},
    "outputs": [],
@@ -182,8 +197,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98b47032",
+   "metadata": {},
+   "source": [
+    "Feature Engineering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "c0c24030",
    "metadata": {},
    "outputs": [],
@@ -210,6 +233,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c967319",
+   "metadata": {},
+   "source": [
+    "Multivariate Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1c400637",
@@ -221,11 +252,21 @@
     "y = df['price']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Handle missing values (using train set statistics)\n",
+    "# Handle missing values \n",
     "for col in ['total_sqft', 'bath', 'bhk', 'price_per_sqft']:\n",
     "    median_val = X_train[col].median()\n",
     "    X_train[col].fillna(median_val, inplace=True)\n",
     "    X_test[col].fillna(median_val, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a624f93",
+   "metadata": {},
+   "source": [
+    "Independent variables (X): \"total_sqft\", \"bath\", \"bhk\", \"price_per_sqft\"\n",
+    "\n",
+    "Dependent variable (Y): \"Price\""
    ]
   },
   {
